--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -33,8 +33,8 @@
 % \printbibliography[heading = bibintoc, title = Bibliography]    % 'bibintoc' inserts our bibliography into the table of contents
 
 % Inserting appendix with separate settings
-\addappendix
-\import{./Appendices/}{example_appendix}
+% \addappendix
+% \import{./Appendices/}{example_appendix}
 
 % End of document
 \end{document}
