endret på bilde path

--- a/Latex/Sections/Beskrivelse.tex
+++ b/Latex/Sections/Beskrivelse.tex
@@ -92,7 +92,7 @@ The master has some additional tasks, like decision making and delegating the di
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/Master_todo.png}
+    \includegraphics[width=\textwidth]{Images/Master_todo.png}
     \caption{How the master should when hallcall is received}
     \label{fig:master_todo}
 \end{figure}
@@ -102,7 +102,7 @@ Every node should work using this preliminary state diagram to show what states 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Latex/Images/418651894_696195342724008_4289962557826126166_n.png}
+    \includegraphics[width=\textwidth]{Images/418651894_696195342724008_4289962557826126166_n.png}
     \caption{A state diagram for each node}
     \label{fig:fsm_node}
 \end{figure}
